--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bottleneck": "^2.19.5",
     "discord-api-types": "^0.37.119",
     "discord.js": "^14.17.3",
+    "dotenv": "^16.4.7",
     "fast-content-type-parse": "^2.0.1",
     "fast-deep-equal": "^3.1.3",
     "lodash": "^4.17.21",
